[project]
name = "PyLibTestLib"
version = "0.1.0"
description = "A short description of your library: it's made for testing"
authors = [{name = "Lee Keong", email = "lee-keong.tee@hotmail.com"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
